k8s/backend-drawer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: draw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: draw
  template:
    metadata:
      labels:
        app: draw
    spec:
      containers:
        - image: pbsem2/drawer_image:latest
          name: draw
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: server

---

apiVersion: v1
kind: Service
metadata:
  name: draw
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: draw
