k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-editor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-editor
  template:
    metadata:
      labels:
        app: user-editor
    spec:
      containers:
        - image: pbsem2/new_image:latest
          name: user-editor
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8082
              name: server
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: user-editor
spec:
  type: ClusterIP
  ports:
    - port: 8082
      protocol: TCP
      targetPort: server
  selector:
    app: user-editor
