k8s/config_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
        - image: pbsem2/config_image:latest
          name: config
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8888
              name: server

---

apiVersion: v1
kind: Service
metadata:
  name: config
spec:
  type: LoadBalancer
  ports:
    - port: 8888
      protocol: TCP
      targetPort: server
  selector:
    app: config
