k8s/ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-pico
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users-api
            pathType: Prefix
            backend:
              service:
                name: user-editor
                port:
                  number: 8082
                  
#          - path: /?(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: frontend
#                port:
#                  number: 80
